--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Weather Demo</string>
     <string name="enter_valid_city">Please Enter a valid City</string>
     <string name="something_went_wrong">Something went wrong</string>
+    <string name="city_already_added">Ciy is already added to favorites</string>
+    <string name="city_added_to_fav">City added to Favorites</string>
 </resources>
